2009-04-10  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: fix handling of double-backslash in quoted
	  strings

2009-04-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Check authopt before using it.

2009-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* client-drc/sendbackup.c: Init result.

2009-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper-source.c (default_taper_source_seek_to_part_start):
	  returns FALSE on not splitted dump.
	* server-src/driverio.c: info.last_level should not be set on error
	                 if level >= info.last_level.
	* server-src/driver.c: Rename update_failed_dump_to_tape to
	  update_failed_dump.
	  Call update_failed_dump on failed dump to holding disk.
	* application-src/amgtar.c: Don't update statefile if the backup failed.
	* client-drc/sendbackup.c: Don't update amandates if backup failed.

2009-04-03  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/compat.pm: always configure devices while
	  scanning
	* server-src/amcheckdump.pl: configure devices returned from the
	  changer

2009-04-01  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c: don't send empty location constraint,
	  allocate error messages

2009-04-01  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c: always send errors from setup_handle

2009-04-01  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3-device.c: don't clobber errors from setup_handle

2009-03-31  Jean-Louis Martineau <martineau@zmanda.com>
        * server-src/amcheck.c: Set l on error path.

2009-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/compat.pm: Don't import :logging from Debug.

2009-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/deb/changelog, packaging/deb/rules,
	* packaging/deb/buildpkg, packaging/rpm/buildpkg,
	* packaging/rpm/amanda.spec: Change version to 2.6.1p1.
	* NEWS: Add news for 2.6.1p1.